Starting linked data structure.

--- a/SetMap/index.html
+++ b/SetMap/index.html
@@ -16,8 +16,7 @@ extremely important functionalities (searching and sorting).
 <hr>
 <h3>Topcoder Problems to help with Sets and Maps</h3>
 <UL>
-<LI> <a href=http://web.eecs.utk.edu/~jplank/plank/classes/cs140/Topcoder/MultiplicationTable2.html>SRM 685, D1, 250-Pointer: MultiplicationTable2</a>.  This is a straightforward <b>set</b> 
-problem.
+<LI> <a href=http://web.eecs.utk.edu/~jplank/topcoder-writeups/2016/MultiplicationTable2/index.html>SRM 685, D1, 250-Pointer: MultiplicationTable2</a>.  This is a straightforward usage of sets.
 <LI> <a href=http://web.eecs.utk.edu/~jplank/topcoder-writeups/2016/Ropestring>SRM 696, D2, 250-Pointer: Ropestring</a>.  This is a straightforward problem to let you practice multisets.
 <LI> <a href=http://web.eecs.utk.edu/~jplank/topcoder-writeups/2017/RelativeHeights/index.html>SRM 718, D2, 250-Pointer: RelativeHeights</a>.  Maps, sets and some string processing.  This is a good practice problem.
 <LI> <a href=http://web.eecs.utk.edu/~jplank/plank/classes/cs140/Topcoder/AmebaDiv1.html>SRM 615, D1, 250-Pointer: AmebaDiv1</a>.  This is another relatively straightforward <b>set</b> 
