--- a/Recursion/debug.html
+++ b/Recursion/debug.html
@@ -58,95 +58,95 @@ Try it out.  You should see how the output of <b>gdb</b> matches
 the lecture note example of running <b>rec2.cpp</b>:
 
 <pre>
-UNIX> <font color=darkred><b>gdb rec2</b></font>
-GNU gdb 6.3.50-20050815 (Apple version gdb-1461.2) (Fri Mar  5 04:43:10 UTC 2010)
-Copyright 2004 Free Software Foundation, Inc.
-GDB is free software, covered by the GNU General Public License, and you are
-welcome to change it and/or distribute copies of it under certain conditions.
-Type "show copying" to see the conditions.
-There is absolutely no warranty for GDB.  Type "show warranty" for details.
-This GDB was configured as "x86_64-apple-darwin"...Reading symbols for shared libraries ... done
+UNIX> <font color=darkred><b>g++ -g src/rec2.cpp</b></font>
+UNIX> <font color=darkred><b>gdb a.out</b></font>
+GNU gdb (GDB) Red Hat Enterprise Linux 7.6.1-115.el7
+Copyright (C) 2013 Free Software Foundation, Inc.
+License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
+This is free software: you are free to change and redistribute it.
+There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
+and "show warranty" for details.
+This GDB was configured as "x86_64-redhat-linux-gnu".
+For bug reporting instructions, please see:
+<http://www.gnu.org/software/gdb/bugs/>...
+Reading symbols from /home/jplank/cs140/Notes/Recursion/a.out...done.
+(gdb) <font color=darkred><b>break 13</b></font>
+Breakpoint 1 at 0x40058c: file src/rec2.cpp, line 13.
+(gdb) <font color=darkred><b>break 22</b></font>
+Breakpoint 2 at 0x4005c7: file src/rec2.cpp, line 22.
+(gdb) <font color=darkred><b>run</b></font>
+Starting program: /home/jplank/cs140/Notes/Recursion/a.out 
 
-(gdb) <font color=darkred><b> break 11</b></font>
-Breakpoint 1 at 0x100000c9a: file rec2.cpp, line 11.
-(gdb) <font color=darkred><b> break 20</b></font>
-Breakpoint 2 at 0x100000cd2: file rec2.cpp, line 20.
-(gdb) <font color=darkred><b> run</b></font>
-Starting program: /Users/plank/tmp-class/Recursion/rec2 
-Reading symbols for shared libraries ++. done
-
-Breakpoint 2, main () at rec2.cpp:20
-20	  a(3);
-(gdb) <font color=darkred><b> where</b></font>
-#0  main () at rec2.cpp:20
-(gdb) <font color=darkred><b> cont</b></font>
+Breakpoint 2, main () at src/rec2.cpp:22
+22	  a(3);
+(gdb) <font color=darkred><b>where</b></font>
+#0  main () at src/rec2.cpp:22
+(gdb) <font color=darkred><b>cont</b></font>
 Continuing.
 In procedure a: i = 3, j = 15
 
-Breakpoint 1, a (i=3) at rec2.cpp:11
-11	  if (i > 0) a(i-1);
-(gdb) <font color=darkred><b> where</b></font>
-#0  a (i=3) at rec2.cpp:11
-#1  0x0000000100000cdc in main () at rec2.cpp:20
-(gdb) <font color=darkred><b> print i</b></font>
+Breakpoint 1, a (i=3) at src/rec2.cpp:13
+13	  if (i > 0) a(i-1);
+(gdb) <font color=darkred><b>where</b></font>
+#0  a (i=3) at src/rec2.cpp:13
+#1  0x00000000004005d1 in main () at src/rec2.cpp:22
+(gdb) <font color=darkred><b>print i</b></font>
 $1 = 3
-(gdb) <font color=darkred><b> print j</b></font>
+(gdb) <font color=darkred><b>print j</b></font>
 $2 = 15
-(gdb) <font color=darkred><b> cont</b></font>
+(gdb) <font color=darkred><b>cont</b></font>
 Continuing.
 In procedure a: i = 2, j = 10
 
-Breakpoint 1, a (i=2) at rec2.cpp:11
-11	  if (i > 0) a(i-1);
-(gdb) <font color=darkred><b> where</b></font>
-#0  a (i=2) at rec2.cpp:11
-#1  0x0000000100000caa in a (i=3) at rec2.cpp:11
-#2  0x0000000100000cdc in main () at rec2.cpp:20
-(gdb) <font color=darkred><b> print i</b></font>
+Breakpoint 1, a (i=2) at src/rec2.cpp:13
+13	  if (i > 0) a(i-1);
+(gdb) <font color=darkred><b>where</b></font>
+#0  a (i=2) at src/rec2.cpp:13
+#1  0x000000000040059f in a (i=3) at src/rec2.cpp:13
+#2  0x00000000004005d1 in main () at src/rec2.cpp:22
+(gdb) <font color=darkred><b>print i</b></font>
 $3 = 2
-(gdb) <font color=darkred><b> print j</b></font>
+(gdb) <font color=darkred><b>print j</b></font>
 $4 = 10
-(gdb) <font color=darkred><b> cont</b></font>
+(gdb) <font color=darkred><b>cont</b></font>
 Continuing.
 In procedure a: i = 1, j = 5
 
-Breakpoint 1, a (i=1) at rec2.cpp:11
-11	  if (i > 0) a(i-1);
-(gdb) <font color=darkred><b> where</b></font>
-#0  a (i=1) at rec2.cpp:11
-#1  0x0000000100000caa in a (i=2) at rec2.cpp:11
-#2  0x0000000100000caa in a (i=3) at rec2.cpp:11
-#3  0x0000000100000cdc in main () at rec2.cpp:20
-(gdb) <font color=darkred><b> print i</b></font>
+Breakpoint 1, a (i=1) at src/rec2.cpp:13
+13	  if (i > 0) a(i-1);
+(gdb) <font color=darkred><b>where</b></font>
+#0  a (i=1) at src/rec2.cpp:13
+#1  0x000000000040059f in a (i=2) at src/rec2.cpp:13
+#2  0x000000000040059f in a (i=3) at src/rec2.cpp:13
+#3  0x00000000004005d1 in main () at src/rec2.cpp:22
+(gdb) <font color=darkred><b>print i</b></font>
 $5 = 1
-(gdb) <font color=darkred><b> print j</b></font>
+(gdb) <font color=darkred><b>print j</b></font>
 $6 = 5
-(gdb) <font color=darkred><b> cont</b></font>
+(gdb) <font color=darkred><b>cont</b></font>
 Continuing.
 In procedure a: i = 0, j = 0
 
-Breakpoint 1, a (i=0) at rec2.cpp:11
-11	  if (i > 0) a(i-1);
-(gdb) <font color=darkred><b> where</b></font>
-#0  a (i=0) at rec2.cpp:11
-#1  0x0000000100000caa in a (i=1) at rec2.cpp:11
-#2  0x0000000100000caa in a (i=2) at rec2.cpp:11
-#3  0x0000000100000caa in a (i=3) at rec2.cpp:11
-#4  0x0000000100000cdc in main () at rec2.cpp:20
-(gdb) <font color=darkred><b> print i</b></font>
+Breakpoint 1, a (i=0) at src/rec2.cpp:13
+13	  if (i > 0) a(i-1);
+(gdb) <font color=darkred><b>where</b></font>
+#0  a (i=0) at src/rec2.cpp:13
+#1  0x000000000040059f in a (i=1) at src/rec2.cpp:13
+#2  0x000000000040059f in a (i=2) at src/rec2.cpp:13
+#3  0x000000000040059f in a (i=3) at src/rec2.cpp:13
+#4  0x00000000004005d1 in main () at src/rec2.cpp:22
+(gdb) <font color=darkred><b>print i</b></font>
 $7 = 0
-(gdb) <font color=darkred><b> print j</b></font>
+(gdb) <font color=darkred><b>print j</b></font>
 $8 = 0
-(gdb) <font color=darkred><b> cont</b></font>
+(gdb) <font color=darkred><b>cont</b></font>
 Continuing.
 Later In procedure a: i = 0, j = 0
 Later In procedure a: i = 1, j = 5
 Later In procedure a: i = 2, j = 10
 Later In procedure a: i = 3, j = 15
 main: 16
-
-Program exited normally.
-(gdb) <font color=darkred><b> quit</b></font>
+[Inferior 1 (process 16002) exited normally]
+(gdb) <font color=darkred><b>quit</b></font>
 UNIX> <font color=darkred><b></b></font>
-
 </pre>
