--- a/Sudoku/index.html
+++ b/Sudoku/index.html
@@ -64,7 +64,7 @@ class Sudoku {
   public:
     void Clear();                        <font color=blue>// Clear the current puzzle</font>
     std::string Read_From_Stdin();       <font color=blue>// Read a puzzle from standard input.  Return "" on </font>
-                                         <font color=blue>// success, "EOF" on EOF, or an error string on failure.
+                                         <font color=blue>// success, "EOF" on EOF, or an error string on failure.</font>
     void Print_Screen() const;           <font color=blue>// Print the puzzle to the screen</font>
     void Print_Convert() const;          <font color=blue>// Print commands for convert to make Sudoku.jpg</font>
     bool Solve();                        <font color=blue>// Solve the puzzle - returns false if unsolvable</font>
