--- a/Sudoku/index.html
+++ b/Sudoku/index.html
@@ -477,8 +477,7 @@ int Sudoku::Solve()
 We will go over each part of <b>Recursive_Solve()</b> separately.  The first
 part of it checks successive elements of the grid until it gets to the end 
 of the grid, or it gets to a dash character.  If it reaches the end of
-the grid, then the puzzle is solved, and it returns 1.  Those are C-style
-comments, by the way.  I'm an old man.
+the grid, then the puzzle is solved, and it returns 1.  
 
 <p><center><table border=3 cellpadding=3><td><pre>
 int Sudoku::Recursive_Solve(int r, int c)
