--- a/AVL-Trees/index.html
+++ b/AVL-Trees/index.html
@@ -4,8 +4,7 @@
 <UL>
 <LI> James S. Plank
 <LI> Directory: <b>/home/plank/cs140/Notes/AVLTree</b>
-<LI> Original Notes: <i>
-Mid 2000's.
+<LI> Original Notes: <i> Mid 2000's.</i>
 <LI> Last Revision: <i>
 Wed Nov  6 14:04:09 EST 2019
 </i>
