--- a/Running_Times/index.html
+++ b/Running_Times/index.html
@@ -498,4 +498,11 @@ can do negative bins, with the exception of the vector implementation).
 <hr>
 <h3>Topcoder Problems with Running Time Analyses</h3>
 
-Not ready yet.
+The analyses accompany the individual problem writeups:
+
+<UL>
+<LI> <a href=http://web.eecs.utk.edu/~jplank/topcoder-writeups/2013/LittleElephantAndDouble/index.html>SRM 597, D2, 250: LittleElephantAndDouble</a>
+<LI> <a href=http://web.eecs.utk.edu/~jplank/topcoder-writeups/2015/DevuAndGame/index.html>SRM 666, D2, 222: DevuAndGame</a>
+<LI> <a href=http://web.eecs.utk.edu/~jplank/topcoder-writeups/2016/ListeningSongs/index.html>SRM 679, D2, 250: ListeningSongs</a>
+<LI> <a href=http://web.eecs.utk.edu/~jplank/topcoder-writeups/2013/SwappingDigits/index.html>SRM 583, D2, 250: SwappingDigits</a>
+</UL>
